# ufb-tauri

./: .gitattributes  .gitignore  MOUNT-UI-CHANGES.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
LICENSES/: Pdfium-LICENSE.txt  SQLite-LICENSE.txt  THIRD_PARTY_NOTICES.txt  WinFSP-LICENSE.txt  rclone-LICENSE.txt
assets/projectTemplate/3d/_t_project_name/project/: template.blend
assets/scripts/: ae_finder.ps1  install_nilesoft.ps1  move_to_zold.ps1  new_project_folder.ps1  new_shot.ps1  new_timestamp_folder.ps1  open_union_link.ps1  open_union_link.vbs  premiere_finder.ps1  project_notes.ps1  transcode.ps1
assets/shell/: shell.nss
assets/shell/import/: taskbar.nss  union_files.nss  union_folders.nss  union_projects.nss
assets/shell/regEntry/: register_union_protocol.reg
assets/shell/scripts/: copy_union_link.ps1
docs/: linux-compatibility-plan.md  macos-support-plan.md  nas-sync-log.md  nas-sync-plan.md  nfs-loopback-plan.md  v0.5.1-release-notes.md  windows-build-notes.md  windows-build-prereqs.md  windows-drag-out-notes.md  windows-io-backend-evaluation.md  windows-port-notes.md  windows-smartscreen-448.md  windows-winfsp-port-plan.md
installer/: ufb_tauri_installer.iss
mediamount-agent/: Cargo.toml  build.rs
mediamount-agent/src/: config.rs  main.rs  messages.rs  mount_service.rs  orchestrator.rs  state.rs  tray.rs
mediamount-agent/src/health/: mod.rs  probe.rs
mediamount-agent/src/ipc/: fileops_server.rs  mod.rs  server.rs  unix_server.rs
mediamount-agent/src/platform/: mod.rs
mediamount-agent/src/platform/linux/: credentials.rs  fallback.rs  mod.rs  mountpoint.rs
mediamount-agent/src/platform/macos/: credentials.rs  fallback.rs  mod.rs  mountpoint.rs
mediamount-agent/src/platform/windows/: credentials.rs  elevation.rs  fallback.rs  mod.rs  mountpoint.rs
mediamount-agent/src/rclone/: cache.rs  mod.rs  parser.rs
mediamount-agent/src/sync/: cache.rs  cache_core.rs  conflict.rs  connectivity.rs  filter.rs  macos_cache.rs  macos_watcher.rs  mod.rs  nas_health.rs  nfs_server.rs  placeholder.rs  sync_root.rs  watcher.rs  windows_cache.rs  winfsp_server.rs
mediamount-agent/src/sync/write_through/: client_watcher.rs  mod.rs  worker.rs
mediamount-nfs-spike/: Cargo.toml  README.md
mediamount-nfs-spike/src/: main.rs
mediamount-tray/: MediaMountTray.swift  project.yml
mediamount-tray/FileProviderExtension/: AgentFileOpsClient.swift  FileProviderEnumerator.swift  FileProviderExtension.entitlements  FileProviderExtension.swift  FileProviderItem.swift  Info.plist
mediamount-tray/FinderSync/: BadgeClient.swift  FinderSync.entitlements  FinderSyncController.swift  Info.plist
mediamount-tray/MediaMountTray/: AgentConnection.swift  AgentProcess.swift  DomainManager.swift  Info.plist  LegacyDomainCleanup.swift  MediaMountTray.entitlements  MediaMountTrayApp.swift  MountInfo.swift  SidebarManager.swift
mediamount-tray/MediaMountTray.app/Contents/: Info.plist
mediamount-tray/MediaMountTray.app/Contents/MacOS/: MediaMountTray
scripts/: build-ffmpeg-macos.sh  bundle-macos-deps.sh
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/assets/linux/: com.unionfiles.ufb.desktop
src-tauri/assets/projectTemplate/3d/_t_project_name/project/: template.blend1
src-tauri/assets/projectTemplate/ae/_t_project_name/project/: _template.aep
src-tauri/assets/projectTemplate/premiere/_t_project_name/project/: _template.prproj
src-tauri/assets/scripts/: ae_finder.ps1  ae_render.ps1  copy_ufb_link.ps1  move_to_zold.ps1  new_project.ps1  new_project_folder.ps1  new_shot.ps1  open_union_link.sh  premiere_finder.ps1  project_notes.ps1  transcode.ps1  uninstall_nilesoft.ps1
src-tauri/assets/shell/import/: modify.nss  taskbar.nss  union_goto.nss  union_projects.nss
src-tauri/assets/shell/regEntry/: register_union_protocol.reg
src-tauri/capabilities/: default.json
src-tauri/csrc/: video_thumb.c
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: app_state.rs  backup.rs  bookmarks.rs  columns.rs  commands.rs  db.rs  drag_out.rs  explorer_pins.rs  file_ops.rs  http_server.rs  lib.rs  main.rs  mesh_sync.rs  metadata.rs  mount_client.rs  peer_manager.rs  project_config.rs  search.rs  settings.rs  shell_context_menu.rs  subscription.rs  sync_aware.rs  system_icons.rs  thumbnails.rs  transcode.rs  udp_notify.rs  utils.rs
src/components/Console/: ConsolePanel.css  ConsolePanel.tsx
src/components/DualBrowserView/: DualBrowserView.css  DualBrowserView.tsx
src/components/FileBrowser/: FileBrowser.css  FileBrowser.tsx  FileGridView.tsx  FileListView.tsx  FileTreeView.tsx  NavigationBar.tsx  ThumbnailImage.tsx
src/components/FileOpsProgress/: FileOpsProgress.css  FileOpsProgress.tsx
src/components/FolderTabView/: ColumnManagerDialog.css  ColumnManagerDialog.tsx  FolderTabView.css  FolderTabView.tsx  ItemListPanel.css  ItemListPanel.tsx
src/components/JobView/: JobView.css  JobView.tsx
src/components/NotesWebView/: NotesWebView.css  NotesWebView.tsx
src/components/Settings/: SettingsDialog.css  SettingsDialog.tsx
src/components/SubscriptionPanel/: SubscriptionPanel.css  SubscriptionPanel.tsx
src/components/TrackerView/: TrackerView.css  TrackerView.tsx
src/components/TranscodeQueue/: TranscodeQueue.css  TranscodeQueue.tsx
src/components/shared/: Splitter.css  Splitter.tsx
src/images/: unionFiles.ai
src/lib/: cellRenderers.tsx  contextMenuPosition.ts  deepLink.ts  fileIcons.ts  inferItemType.ts  mergeColumns.ts  systemIconCache.ts  tauri.ts  types.ts  useBrowserDragDrop.ts  useColumnResize.ts  useRubberBandSelect.ts
src/stores/: dragStore.ts  fileOpsStore.ts  fileStore.ts  mountStore.ts  platformStore.ts  settingsStore.ts  subscriptionStore.ts  transcodeStore.ts  workspaceStore.ts
src/styles/: theme.css
