[package]
name = "mediamount-agent"
version = "0.3.5"
edition = "2021"
description = "MediaMount VFS mount agent for UFB"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simplelog = "0.12"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
tray-icon = "0.21"
muda = "0.17"
gtk = "0.18"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
notify = "7"  # FSEvents file watcher for NAS change detection
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
# NFS3 loopback server — presents SMB mounts to Finder via native kernel NFS
# client, sidestepping FileProvider's per-op framework overhead.
nfsserve = "0.10"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
cloud-filter = "0.0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_NetworkManagement_WNet",
    "Win32_Security_Credentials",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]
