[package]
name = "mediamount-agent"
version = "0.4.1"
edition = "2021"
description = "MediaMount VFS mount agent for UFB"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simplelog = "0.12"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
tray-icon = "0.21"
muda = "0.17"
gtk = "0.18"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
notify = "7"  # FSEvents file watcher for NAS change detection
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
# NFS3 loopback server — presents SMB mounts to Finder via native kernel NFS
# client, sidestepping FileProvider's per-op framework overhead.
nfsserve = "0.10"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
# WinFsp user-mode filesystem driver, native API. Requires WinFsp 2.x runtime
# + Developer SDK installed (headers and import lib at
# `C:\Program Files (x86)\WinFsp\{inc,lib}\`). Build also needs LLVM libclang
# for `winfsp-sys`'s bindgen step — set LIBCLANG_PATH or install LLVM to PATH.
# Licensed GPL-3.0; UFB is GPL-3.0 to satisfy the FLOSS exception. See
# docs/windows-winfsp-port-plan.md and docs/windows-io-backend-evaluation.md.
winfsp = { version = "0.12", features = ["debug", "system"] }
widestring = "1.2"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
# Sets up delay-loading for winfsp-x64.dll so Windows can find it via the
# WinFsp install registry at runtime without the DLL being in PATH.
winfsp = { version = "0.12", features = ["delayload"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_NetworkManagement_WNet",
    "Win32_Security_Credentials",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]
