[package]
name = "mediamount-nfs-spike"
version = "0.1.0"
edition = "2021"
description = "Throwaway spike: NFS3 loopback passthrough for measuring vs plain SMB / FileProvider"
publish = false

[dependencies]
# NFS3 server — xetdata/nfsserve
nfsserve = "0.10"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
